# kairos

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/: README.md
docs/candlestick-shape-quantization/: 00-vq-vae-tokenizer-validation-plan.md  01-problem-and-research-scope.md  02-shape-tokenizer.md  07-evidence-and-references.md  08-research-roadmap.md  README.md
docs/candlestick-shape-quantization/results/: README.md  phase-01-step-01-merge-distribution-check.md  phase-01-step-01-shape-feature-validation.md  phase-01-step-02-tokenizer-baselines.md  phase-01-step-03-vq-final-gate.md  phase-01-step-03-vq-latent-clustering.md  phase-02-step-01-1m-structure-diagnosis.md  phase-02-step-01-daily-only-gate.md  phase-02-step-01-token-corpus.md
kairos/: data.py  features.py  sequence_metrics.py  shape_metrics.py  train.py
kairos/core/: __init__.py  data.py  model.py  shape_metrics.py
kairos/experiments/: __init__.py  artifacts.py  protocol.py
kairos/experiments/protocols/: candlestick_shape_quantization.json
kairos/experiments/shape_tokenizer/: __init__.py  vq.py  (+4 more)
kairos/sources/: __init__.py  brokers.py
notebooks/: AGENTS.md
notebooks/candlestick-shape-quantization/: 00_data_protocol.ipynb  01_shape_feature_validation.ipynb  02_tokenizer_baselines.ipynb  03_vq_tokenizer.ipynb  04_token_corpus.ipynb  AGENTS.md
reports/: candlestick-shape-quantization-phase1.pptx
scripts/: update-broker-modules.sh
tests/: test_baselines.py  test_corpus.py  test_experiment_protocol.py  test_feature_validation.py  test_features.py  test_sources.py  test_vq.py
(+3 files in other folders)
