[project]
name = "kairos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.3.0",
    "matplotlib>=3.11.0",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "yfinance>=1.5.1",
    "broker-modules",
]

[tool.uv.sources]
broker-modules = { git = "https://github.com/chosey0/broker-modules.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kairos"]